--- a/BoardWeb/src/main/resources/application.properties
+++ b/BoardWeb/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ### Business Layer ###
 ######################
 # WebApplication Type Setting
-spring.main.web-application-type=none
+spring.main.web-application-type=servlet
 
 # Banner Setting
 spring.main.banner-mode=off
@@ -21,3 +21,13 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Logging Setting
 logging.level.org.hibernate=info
+
+### Presentation Layer ###
+##########################
+
+# Thymeleaf Cache Setting
+spring.thymeleaf.cache=false
+
+# Logging Setting
+logging.level.org.springframework.web=debug
+logging.level.org.springframework.security=debug
